hphp/hack/test/typecheck/lambda/lambda_contextual/lambda_bad_as_shape_argument.php.exp
File "lambda_bad_as_shape_argument.php", line 34, characters 17-30:
No method 'missing_method' in MyClass (did you mean 'hello'?) (Typing[4053])
File "lambda_bad_as_shape_argument.php", line 23, characters 28-34:
This is why I think it is an object of type MyClass
File "lambda_bad_as_shape_argument.php", line 23, characters 28-34:
Considering that this type argument is contravariant with respect to MyClosureRunner
File "lambda_bad_as_shape_argument.php", line 4, characters 7-13:
Declaration of MyClass is here
